--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "ramsey/uuid": "^4.2",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
